fix page overflow

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,4 +1,3 @@
 body {
   background-color: var(--dark-0);
-  overflow: hidden;
 }
